[package]
name = "tyrbine-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tyrbine_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.31.0", features = ["metadata"] }
pyth-solana-receiver-sdk ="0.6.0"
uint = "0.10.0"
base64ct = "=1.7"
